logs/bib2web.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/bib2web'...
Listing './lib/python3.5/site-packages/bib2web/bibtexparser'...
Compiling './lib/python3.5/site-packages/bib2web/gui.py'...
***   File "./lib/python3.5/site-packages/bib2web/gui.py", line 84
    print "Updating table with new entries"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bib2web/main.py'...
***   File "./lib/python3.5/site-packages/bib2web/main.py", line 67
    print words
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bib2web/merge.py'...
***   File "./lib/python3.5/site-packages/bib2web/merge.py", line 95
    print "Something wrong with author"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bib2web/name.py'...
***   File "./lib/python3.5/site-packages/bib2web/name.py", line 26
    print names
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bib2web/normalize.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (normalize.py, line 124)
Listing './lib/python3.5/site-packages/bib2web-0.17.egg-info'...
Listing './lib/python3.5/site-packages/custom_fixers'...
Listing './lib/python3.5/site-packages/fuzzywuzzy'...
Listing './lib/python3.5/site-packages/fuzzywuzzy-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/latexcodec'...
Listing './lib/python3.5/site-packages/latexcodec-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybtex'...
Listing './lib/python3.5/site-packages/pybtex/backends'...
Listing './lib/python3.5/site-packages/pybtex/bibtex'...
Listing './lib/python3.5/site-packages/pybtex/charwidths'...
Listing './lib/python3.5/site-packages/pybtex/database'...
Listing './lib/python3.5/site-packages/pybtex/database/convert'...
Listing './lib/python3.5/site-packages/pybtex/database/format'...
Listing './lib/python3.5/site-packages/pybtex/database/input'...
Listing './lib/python3.5/site-packages/pybtex/database/output'...
Listing './lib/python3.5/site-packages/pybtex/docgen'...
Listing './lib/python3.5/site-packages/pybtex/plugin'...
Listing './lib/python3.5/site-packages/pybtex/style'...
Listing './lib/python3.5/site-packages/pybtex/style/formatting'...
Listing './lib/python3.5/site-packages/pybtex/style/labels'...
Listing './lib/python3.5/site-packages/pybtex/style/names'...
Listing './lib/python3.5/site-packages/pybtex/style/sorting'...
Listing './lib/python3.5/site-packages/pybtex/tests'...
Listing './lib/python3.5/site-packages/pybtex/tests/bst_parser_test'...
Listing './lib/python3.5/site-packages/pybtex/tests/data'...
Listing './lib/python3.5/site-packages/pybtex/tests/database_test'...
Listing './lib/python3.5/site-packages/pybtex-0.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
